src/objects/fferpcore__BillingDocument__c.object
<CustomObject>
    <customHelpPage>fferpcore__BillingDocumentHelp</customHelpPage>
    <description>Contains sales invoice and sales credit note billing documents that enable you to bill and credit customers.</description>
    <fields>
        <fullName>c2g__MatchType__c</fullName>
        <description>Match Type of the FinancialForce Accounting transaction to which this billing document relates.</description>
        <formula>TEXT(c2g__Transaction__r.c2g__MatchType__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Match Type of the FinancialForce Accounting transaction to which this billing document relates.</inlineHelpText>
        <label>Match Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__OutstandingValue__c</fullName>
        <description>Outstanding Value of the FinancialForce Accounting transaction to which this billing document relates.</description>
        <formula>c2g__Transaction__r.c2g__DocumentOutstandingTotal__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Outstanding Value of the FinancialForce Accounting transaction to which this billing document relates.</inlineHelpText>
        <label>Outstanding Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__PaymentStatus__c</fullName>
        <description>Transaction Payment Status of the FinancialForce Accounting transaction to which this billing document relates.</description>
        <formula>if(OR(NOT(ISPICKVAL(fferpcore__DocumentStatus__c, &apos;Complete&apos;)),
      NOT(ISPICKVAL(c2g__PostingStatus__c, &apos;Posted&apos;))),
&apos;Not Applicable&apos;,

if(c2g__Transaction__r.c2g__DocumentOutstandingTotal__c == 0, &apos;Paid&apos;,

if(c2g__Transaction__r.c2g__DocumentTotal__c == c2g__Transaction__r.c2g__DocumentOutstandingTotal__c, &apos;Unpaid&apos;,

&apos;Part Paid&apos;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Transaction Payment Status of the FinancialForce Accounting transaction to which this billing document relates.</inlineHelpText>
        <label>Payment Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__PostingError__c</fullName>
        <description>Error that occurred while posting this billing document.</description>
        <inlineHelpText>Error that occurred while posting this billing document.</inlineHelpText>
        <label>Posting Error</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>c2g__PostingStatus__c</fullName>
        <description>Posting status for this billing document.</description>
        <inlineHelpText>Posting status for this billing document.</inlineHelpText>
        <label>Posting Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Posting</fullName>
                </value>
                <value>
                    <fullName>Posted</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__Transaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the FinancialForce Accounting transaction to which this billing document relates.</description>
        <inlineHelpText>Lookup to the FinancialForce Accounting transaction to which this billing document relates.</inlineHelpText>
        <label>Accounting Transaction</label>
        <referenceTo>c2g__codaTransaction__c</referenceTo>
        <relationshipLabel>Billing Document</relationshipLabel>
        <relationshipName>BillingDocument</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__Year__c</fullName>
        <description>FinancialForce Accounting year to which this billing document relates.</description>
        <formula>c2g__Transaction__r.c2g__Period__r.c2g__YearName__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>FinancialForce Accounting year to which this billing document relates.</inlineHelpText>
        <label>Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffaci__CongaEmailStatus__c</fullName>
        <label>Conga Email Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Sent</fullName>
                    <default>true</default>
                    <label>Not Sent</label>
                </value>
                <value>
                    <fullName>Sent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ffaci__CongaPrintStatus__c</fullName>
        <label>Conga Print Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Printed</fullName>
                    <default>true</default>
                    <label>Not Printed</label>
                </value>
                <value>
                    <fullName>Printed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ffaci__CongaTemplate__c</fullName>
        <formula>fferpcore__Company__r.ffaci__CongaTemplateBillingDocument__c</formula>
        <label>Conga Template</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffbc__ContractStatus__c</fullName>
        <description>Formula field containing the status of the contract to which this billing document belongs.</description>
        <formula>TEXT(ffbc__Contract__r.ffbc__Status__c)</formula>
        <inlineHelpText>Status of the contract to which this billing document belongs.</inlineHelpText>
        <label>Contract Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffbc__ContractType__c</fullName>
        <description>Formula field containing the type of contract to which this billing document belongs.</description>
        <formula>TEXT(ffbc__Contract__r.ffbc__Type__c)</formula>
        <inlineHelpText>Type of contract to which this billing document belongs.</inlineHelpText>
        <label>Contract Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffbc__Contract__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Lookup Field to the Contract that have generated the Document</description>
        <label>Contract</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.fferpcore__Account__c</field>
                <operation>equals</operation>
                <valueField>ffbc__Contract__c.ffbc__Account__c</valueField>
            </filterItems>
            <filterItems>
                <field>ffbc__Contract__c.ffbc__Type__c</field>
                <operation>equals</operation>
                <value>Contract</value>
            </filterItems>
            <filterItems>
                <field>ffbc__Contract__c.ffbc__Status__c</field>
                <operation>equals</operation>
                <value>Draft, Active, Expired</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>ffbc__Contract__c</referenceTo>
        <relationshipLabel>Related Billing Documents</relationshipLabel>
        <relationshipName>BillingDocuments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ffbc__TotalledOnContract__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the Total Value of the billing document line items is included in the Total Billed field of the related contract line items.</description>
        <inlineHelpText>Indicates whether the Total Value of the billing document line items is included in the Total Billed field of the related contract line items.</inlineHelpText>
        <label>Included in Contract Total Billed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ffbc__TriggerId__c</fullName>
        <description>An identifier that is used to create billing documents when billing a contract.</description>
        <label>Trigger ID</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fferpcore__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the Salesforce Account to which this document relates.</description>
        <inlineHelpText>Lookup to the Salesforce Account to which this document relates.</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Billing Documents</relationshipLabel>
        <relationshipName>Billing_Documents1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>fferpcore__AnalysisItem1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used to sub-analyze billing documents and can be used to represent a number of different business concepts.</description>
        <inlineHelpText>Used to sub-analyze billing documents and can be used to represent a number of different business concepts.</inlineHelpText>
        <label>Analysis Item 1</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>fferpcore__AnalysisItem__c.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Analysis_1</value>
            </filterItems>
            <filterItems>
                <field>fferpcore__AnalysisItem__c.RecordType.NamespacePrefix</field>
                <operation>equals</operation>
                <value>fferpcore</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>fferpcore__AnalysisItem__c</referenceTo>
        <relationshipLabel>Related Documents 1</relationshipLabel>
        <relationshipName>RelatedDocuments1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>fferpcore__AnalysisItem2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used to sub-analyze billing documents and can be used to represent a number of different business concepts.</description>
        <inlineHelpText>Used to sub-analyze billing documents and can be used to represent a number of different business concepts.</inlineHelpText>
        <label>Analysis Item 2</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>fferpcore__AnalysisItem__c.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Analysis_2</value>
            </filterItems>
            <filterItems>
                <field>fferpcore__AnalysisItem__c.RecordType.NamespacePrefix</field>
                <operation>equals</operation>
                <value>fferpcore</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>fferpcore__AnalysisItem__c</referenceTo>
        <relationshipLabel>Related Documents 2</relationshipLabel>
        <relationshipName>RelatedDocuments2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>fferpcore__AnalysisItem3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used to sub-analyze billing documents and can be used to represent a number of different business concepts.</description>
        <inlineHelpText>Used to sub-analyze billing documents and can be used to represent a number of different business concepts.</inlineHelpText>
        <label>Analysis Item 3</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>fferpcore__AnalysisItem__c.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Analysis_3</value>
            </filterItems>
            <filterItems>
                <field>fferpcore__AnalysisItem__c.RecordType.NamespacePrefix</field>
                <operation>equals</operation>
                <value>fferpcore</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>fferpcore__AnalysisItem__c</referenceTo>
        <relationshipLabel>Related Documents 3</relationshipLabel>
        <relationshipName>RelatedDocuments3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>fferpcore__BillingAccountName__c</fullName>
        <description>Name of the account to appear on the billing document as the account being billed.</description>
        <inlineHelpText>Name of the account to appear on the billing document as the account being billed.</inlineHelpText>
        <label>Billing Account</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__BillingCity__c</fullName>
        <label>Billing City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__BillingCountry__c</fullName>
        <label>Billing Country</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__BillingPostalCode__c</fullName>
        <label>Billing Zip/Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__BillingState__c</fullName>
        <label>Billing State/Province</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__BillingStreet__c</fullName>
        <label>Billing Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>fferpcore__Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the associated company.</description>
        <label>Company</label>
        <referenceTo>fferpcore__Company__c</referenceTo>
        <relationshipLabel>Billing Documents</relationshipLabel>
        <relationshipName>Billing_Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>fferpcore__CompletionProcessTracking__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the process tracking record to which this billing document currently relates.</description>
        <inlineHelpText>Lookup to the process tracking record to which this billing document currently relates.</inlineHelpText>
        <label>Completion Process</label>
        <referenceTo>fferpcore__ProcessTracking__c</referenceTo>
        <relationshipLabel>Billing Documents</relationshipLabel>
        <relationshipName>BillingDocuments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>fferpcore__CustomerReference__c</fullName>
        <description>External customer reference.</description>
        <inlineHelpText>External customer reference.</inlineHelpText>
        <label>Customer Reference</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>fferpcore__DateIssued__c</fullName>
        <description>Date on which the billing document was sent.</description>
        <inlineHelpText>Date on which the billing document was sent.</inlineHelpText>
        <label>Date Issued</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>fferpcore__Description__c</fullName>
        <description>Description of the sales invoice or credit note.</description>
        <inlineHelpText>Description of the sales invoice or credit note.</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>fferpcore__DiscountTotal__c</fullName>
        <description>The total discount of all billing document line items associated with this billing document.</description>
        <inlineHelpText>The total saving of all billing document line items associated with this billing document.</inlineHelpText>
        <label>Discount Total</label>
        <summarizedField>fferpcore__BillingDocumentLineItem__c.fferpcore__DiscountTotal__c</summarizedField>
        <summaryForeignKey>fferpcore__BillingDocumentLineItem__c.fferpcore__BillingDocument__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>fferpcore__DocumentDate__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <description>Date on which the document was created.</description>
        <inlineHelpText>Date on which the document was created.</inlineHelpText>
        <label>Document Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>fferpcore__DocumentDueDate__c</fullName>
        <description>Date on which payment is expected.</description>
        <inlineHelpText>Date on which payment is expected.</inlineHelpText>
        <label>Document Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>fferpcore__DocumentStatus__c</fullName>
        <description>Status of the billing document. The status can be Draft or Complete. When the status is complete, you can only edit the Document Due Date, Customer Reference and Description.</description>
        <inlineHelpText>Status of the billing document. The status can be Draft or Complete. When the status is complete, you can only edit the Document Due Date, Customer Reference and Description.</inlineHelpText>
        <label>Document Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Discarded</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>fferpcore__DocumentTotal__c</fullName>
        <description>Total value of all the billing document line items on this billing document.</description>
        <inlineHelpText>Total value of all the billing document line items on this billing document.</inlineHelpText>
        <label>Document Total</label>
        <summarizedField>fferpcore__BillingDocumentLineItem__c.fferpcore__TotalValue__c</summarizedField>
        <summaryForeignKey>fferpcore__BillingDocumentLineItem__c.fferpcore__BillingDocument__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>fferpcore__DocumentTypePrefix__c</fullName>
        <formula>IF(ISPICKVAL(fferpcore__DocumentType__c, &quot;Credit Note&quot;), &quot;CRN&quot;, &quot;INV&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Document Type Prefix</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__DocumentType__c</fullName>
        <description>Indicates whether the document is a sales invoice or a sales credit note.</description>
        <inlineHelpText>Indicates whether the document is a sales invoice or a sales credit note.</inlineHelpText>
        <label>Document Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Invoice</fullName>
                </value>
                <value>
                    <fullName>Credit Note</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>fferpcore__ExternalDocumentNumber__c</fullName>
        <externalId>true</externalId>
        <label>External Document Number</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>fferpcore__FooterText__c</fullName>
        <description>Text to be shown at the end of printed billing documents.</description>
        <inlineHelpText>Text to be shown at the end of printed billing documents.</inlineHelpText>
        <label>Footer Text</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>fferpcore__HeaderText__c</fullName>
        <description>Text to be shown at the start of printed billing documents.</description>
        <inlineHelpText>Text to be shown at the start of printed billing documents.</inlineHelpText>
        <label>Header Text</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>fferpcore__IsBillingAddressValidated__c</fullName>
        <description>Indicates whether the billing address has been validated against the addresses in the external tax calculation service.</description>
        <formula>NOT
            ( ISBLANK(fferpcore__BillingStreet__c) &amp;&amp;
              ISBLANK(fferpcore__BillingCity__c) &amp;&amp;
              ISBLANK(fferpcore__BillingState__c) &amp;&amp;
              ISBLANK(fferpcore__BillingPostalCode__c) &amp;&amp;
              ISBLANK(fferpcore__BillingCountry__c)
            ) &amp;&amp;
            ( fferpcore__BillingStreet__c  =  fferpcore__ValidatedBillingStreet__c ) &amp;&amp;
            ( fferpcore__BillingCity__c =  fferpcore__ValidatedBillingCity__c ) &amp;&amp;
            ( fferpcore__BillingState__c =  fferpcore__ValidatedBillingState__c ) &amp;&amp;
            ( fferpcore__BillingPostalCode__c =  fferpcore__ValidatedBillingPostalCode__c ) &amp;&amp;
            ( fferpcore__BillingCountry__c =  fferpcore__ValidatedBillingCountry__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Indicates whether the billing address has been validated against the addresses in the external tax calculation service.</inlineHelpText>
        <label>Billing Address Validated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>fferpcore__IsComplete__c</fullName>
        <formula>ISPICKVAL(fferpcore__DocumentStatus__c, &quot;Complete&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>fferpcore__IsShippingAddressValidated__c</fullName>
        <description>Indicates whether the shipping address has been validated against the addresses in the external tax calculation service.</description>
        <formula>NOT
            ( ISBLANK(fferpcore__ShippingStreet__c) &amp;&amp;
              ISBLANK(fferpcore__ShippingCity__c) &amp;&amp;
              ISBLANK(fferpcore__ShippingState__c) &amp;&amp;
              ISBLANK(fferpcore__ShippingPostalCode__c) &amp;&amp;
              ISBLANK(fferpcore__ShippingCountry__c)
            ) &amp;&amp;
            ( fferpcore__ShippingStreet__c  =  fferpcore__ValidatedShippingStreet__c ) &amp;&amp;
            ( fferpcore__ShippingCity__c =  fferpcore__ValidatedShippingCity__c ) &amp;&amp;
            ( fferpcore__ShippingState__c =  fferpcore__ValidatedShippingState__c ) &amp;&amp;
            ( fferpcore__ShippingPostalCode__c =  fferpcore__ValidatedShippingPostalCode__c ) &amp;&amp;
            ( fferpcore__ShippingCountry__c =  fferpcore__ValidatedShippingCountry__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Indicates whether the shipping address has been validated against the addresses in the external tax calculation service.</inlineHelpText>
        <label>Shipping Address Validated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>fferpcore__NetTotal__c</fullName>
        <description>The total net value of all billing document line items associated with this billing document.</description>
        <inlineHelpText>The total net value of all billing document line items associated with this billing document.</inlineHelpText>
        <label>Net Total</label>
        <summarizedField>fferpcore__BillingDocumentLineItem__c.fferpcore__NetValue__c</summarizedField>
        <summaryForeignKey>fferpcore__BillingDocumentLineItem__c.fferpcore__BillingDocument__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>fferpcore__NumberOfBillingDocumentLineItems__c</fullName>
        <description>Number of billing document line items currently associated with this billing document.</description>
        <inlineHelpText>Number of billing document line items currently associated with this billing document.</inlineHelpText>
        <label>Number Of Billing Document Line Items</label>
        <summaryForeignKey>fferpcore__BillingDocumentLineItem__c.fferpcore__BillingDocument__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>fferpcore__RelatedDocument__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the related invoice or credit note.</description>
        <inlineHelpText>Lookup to the related invoice or credit note.</inlineHelpText>
        <label>Related Document</label>
        <referenceTo>fferpcore__BillingDocument__c</referenceTo>
        <relationshipLabel>Related Documents</relationshipLabel>
        <relationshipName>RelatedDocuments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>fferpcore__ReportingDocumentTotal__c</fullName>
        <description>Total value of all the billing document line items on this billing document based on the Document Type. If the document is an invoice, the value is the same as the Document Total. If the document is a credit note, the value is calculated using the formula: Document Total * -1.</description>
        <formula>IF (ISPICKVAL(fferpcore__DocumentType__c, &quot;Credit Note&quot;),  fferpcore__DocumentTotal__c * -1, fferpcore__DocumentTotal__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total value of all the billing document line items on this billing document based on the Document Type.</inlineHelpText>
        <label>Reporting Document Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>fferpcore__ShippingAccountName__c</fullName>
        <description>Name of the account to appear on the billing document as the Shipping Account.</description>
        <inlineHelpText>Name of the account to appear on the billing document as the Shipping Account.</inlineHelpText>
        <label>Shipping Account</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__ShippingCity__c</fullName>
        <label>Shipping City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__ShippingCountry__c</fullName>
        <label>Shipping Country</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__ShippingPostalCode__c</fullName>
        <label>Shipping Zip/Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__ShippingState__c</fullName>
        <label>Shipping State/Province</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__ShippingStreet__c</fullName>
        <label>Shipping Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>fferpcore__TaxValueTotal__c</fullName>
        <description>The total tax value of all billing document line items associated with this billing document.</description>
        <inlineHelpText>The total tax value of all billing document line items associated with this billing document.</inlineHelpText>
        <label>Tax Value Total</label>
        <summarizedField>fferpcore__BillingDocumentLineItem__c.fferpcore__TaxValueTotal__c</summarizedField>
        <summaryForeignKey>fferpcore__BillingDocumentLineItem__c.fferpcore__BillingDocument__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>fferpcore__ValidatedBillingCity__c</fullName>
        <label>Validated Billing City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__ValidatedBillingCountry__c</fullName>
        <label>Validated Billing Country</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__ValidatedBillingPostalCode__c</fullName>
        <label>Validated Billing Zip/Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__ValidatedBillingState__c</fullName>
        <label>Validated Billing State/Province</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__ValidatedBillingStreet__c</fullName>
        <label>Validated Billing Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>fferpcore__ValidatedShippingCity__c</fullName>
        <label>Validated Shipping City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__ValidatedShippingCountry__c</fullName>
        <label>Validated Shipping Country</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__ValidatedShippingPostalCode__c</fullName>
        <label>Validated Shipping Zip/Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__ValidatedShippingState__c</fullName>
        <label>Validated Shipping State/Province</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__ValidatedShippingStreet__c</fullName>
        <label>Validated Shipping Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ffps_brunt__Billing_Start_Date__c</fullName>
        <label>Billing Start Date</label>
        <summarizedField>fferpcore__BillingDocumentLineItem__c.ffbc__BillingPeriodStartDate__c</summarizedField>
        <summaryForeignKey>fferpcore__BillingDocumentLineItem__c.fferpcore__BillingDocument__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ffps_brunt__DataMigration__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Data Migration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ffps_brunt__InvoiceStatus__c</fullName>
        <label>Invoice Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Available</fullName>
                    <default>true</default>
                    <label>Available</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Invoice Created</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ffps_brunt__Region__c</fullName>
        <label>Region</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffps_brunt__Sales_Invoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Invoice</label>
        <referenceTo>c2g__codaInvoice__c</referenceTo>
        <relationshipLabel>Billing Documents</relationshipLabel>
        <relationshipName>Billing_Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Billing Document</label>
    <listViews>
        <fullName>fferpcore__All</fullName>
        <columns>NAME</columns>
        <columns>fferpcore__DocumentType__c</columns>
        <columns>fferpcore__Account__c</columns>
        <columns>fferpcore__DocumentStatus__c</columns>
        <columns>fferpcore__DocumentDate__c</columns>
        <columns>fferpcore__DocumentTotal__c</columns>
        <columns>fferpcore__RelatedDocument__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>BD{0000000}</displayFormat>
        <label>Document Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Billing Documents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>